--- a/Site.Master
+++ b/Site.Master
@@ -89,7 +89,7 @@
                 SelectMethod="GetCategories">
                 <ItemTemplate>
                     <b style="font-size: large; font-style: normal">
-                        <a href="/ProductList.aspx?id=<%#: Item.CategoryID %>">
+                        <a href="<%#: GetRouteUrl("ProductsByCategoryRoute", new {categoryName = Item.CategoryName}) %>">
                             <%#: Item.CategoryName %>
                         </a>
                     </b>
