--- a/Site.Master
+++ b/Site.Master
@@ -50,7 +50,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" ID="adminLink" visible="false" href="~/Admin/AdminPage">Admin</a></li>
+                        <li><a runat="server" id="adminLink" visible="false" href="~/Admin/AdminPage">Admin</a></li>
                         <li><a runat="server" href="~/">首頁</a></li>
                         <li><a runat="server" href="~/About">關於</a></li>
                         <li><a runat="server" href="~/Contact">連絡人</a></li>
